fixed some things on mobile devices

--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -18,6 +18,7 @@
 
 .wrapper span {
   font-size: 30px;
+  margin: 0 auto;
 }
 
 .nav {
@@ -48,6 +49,7 @@
 .nav span {
   font-size: 20px;
   padding-left: 5px;
+  margin: unset;
 }
 
 .grid-section {
